# serializer version: 1
# name: test_cli_error_config
  'Vocab list received.'
# ---
# name: test_cli_error_config.1
  "Bad request: 400 Bad Request: The settings provided are not valid: 'number-of-questions' (InvalidSettingsError)"
# ---
# name: test_cli_error_config.2
  '''
  INFO     root:__main__.py:104 Using random seed '10'.
  INFO     waitress:wasyncore.py:449 Serving on http://127.0.0.1:5502
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5502
  INFO     src.server.app:app.py:63 Reading vocab list.
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Verb'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'hear: audio, audire, audivi, auditus'
  DEBUG    src.core.accido._class_verb:_class_verb.py:109 RegularWord(audio, audire, audivi, auditus, meaning=hear)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'take: capio, capere, cepi'
  DEBUG    src.core.accido._class_verb:_class_verb.py:109 RegularWord(capio, capere, cepi, None, meaning=take)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'say: inquam'
  DEBUG    src.core.accido._class_verb:_class_verb.py:109 RegularWord(inquam, None, None, None, meaning=say)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Noun'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'girl: puella, puellae, (f)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(puella, puellae, gender=feminine, meaning=girl)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'farmer: agricola, agricolae, (m)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(agricola, agricolae, gender=masculine, meaning=farmer)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'boy: puer, pueri, (m)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(puer, pueri, gender=masculine, meaning=boy)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'dog: canis, canis, (m)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(canis, canis, gender=masculine, meaning=dog)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'name: nomen, nominis, (n)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(nomen, nominis, gender=neuter, meaning=name)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'I: ego'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(ego, None, gender=None, meaning=I)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Adjective'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'large: ingens, ingentis, (3-1)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(ingens, ingentis, termination=1, declension=3, meaning=large)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'light: levis, leve, (3-2)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(levis, leve, termination=2, declension=3, meaning=light)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'keen: acer, acris, acre, (3-3)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(acer, acris, acre, termination=3, declension=3, meaning=keen)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'good: bonus, bona, bonum, (212)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(bonus, bona, bonum, termination=None, declension=212, meaning=good)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'happy: laetus, laeta, laetum, (2-1-2)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(laetus, laeta, laetum, termination=None, declension=212, meaning=happy)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Regular'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'into: in'
  DEBUG    src.core.accido._class_regularword:_class_regularword.py:46 RegularWord(in, meaning=into)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'from: e'
  DEBUG    src.core.accido._class_regularword:_class_regularword.py:46 RegularWord(e, meaning=from)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Pronoun'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'this: hic, haec, hoc'
  DEBUG    src.core.accido._class_pronoun:_class_pronoun.py:60 Pronoun(hic, meaning=this)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'that: ille'
  DEBUG    src.core.accido._class_pronoun:_class_pronoun.py:60 Pronoun(ille, meaning=that)
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5502 "POST /send-vocab HTTP/1.1" 200 20
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5502
  INFO     src.server.app:app.py:111 Validating settings.
  ERROR    src.server.app:app.py:42 The settings provided are not valid: 'number-of-questions' (InvalidSettingsError)
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5502 "POST /session HTTP/1.1" 400 111
  
  '''
# ---
# name: test_cli_error_list
  "Bad request: 400 Bad Request: Invalid part of speech: 'Cause an error' (InvalidVocabFileFormatError)"
# ---
# name: test_cli_error_list.1
  'Bad request: 400 Bad Request: Vocab list has not been provided.'
# ---
# name: test_cli_error_list.2
  '''
  INFO     root:__main__.py:104 Using random seed '10'.
  INFO     waitress:wasyncore.py:449 Serving on http://127.0.0.1:5501
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5501
  INFO     src.server.app:app.py:63 Reading vocab list.
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Cause an error'
  ERROR    src.server.app:app.py:42 Invalid part of speech: 'Cause an error' (InvalidVocabFileFormatError)
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5501 "POST /send-vocab HTTP/1.1" 400 100
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5501
  ERROR    src.server.app:app.py:42 Vocab list has not been provided.
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5501 "POST /session HTTP/1.1" 400 63
  
  '''
# ---
# name: test_cli_list_badpos
  "Bad request: 400 Bad Request: Invalid part of speech: 'Cause an error' (InvalidVocabFileFormatError)"
# ---
# name: test_cli_list_badpos.1
  'Bad request: 400 Bad Request: Vocab list has not been provided.'
# ---
# name: test_cli_list_badpos.2
  '''
  INFO     root:__main__.py:91 Using random seed '10'.
  INFO     waitress:wasyncore.py:449 Serving on http://127.0.0.1:5501
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5501
  INFO     src.server.app:app.py:84 Reading vocab list.
  DEBUG    src.core.lego.reader:reader.py:212 Reading line '@ Cause an error'
  ERROR    src.server.app:app.py:46 Invalid part of speech: 'Cause an error' (InvalidVocabFileFormatError)
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5501 "POST /send-vocab HTTP/1.1" 400 100
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5501
  ERROR    src.server.app:app.py:46 Vocab list has not been provided.
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5501 "POST /session HTTP/1.1" 400 63
  
  '''
# ---
# name: test_cli_normal
  'Vocab list received.'
# ---
# name: test_cli_normal.1
  list([
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'imperfect active subjunctive plural 1st person',
        ]),
        'dictionary_entry': 'take: capio, capere, cepi',
        'main_answer': 'imperfect active subjunctive plural 1st person',
        'prompt': 'caperemus',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'nominative plural',
          'nominative plural',
          'nominative plural',
        ]),
        'dictionary_entry': 'dog: canis, canis, (m)',
        'main_answer': 'nominative plural',
        'prompt': 'canes',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'puer',
        'choices': list([
          'hic',
          'puer',
          'ille',
        ]),
        'prompt': 'boy',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'nomine',
        ]),
        'main_answer': 'nomine',
        'prompt': 'by a name',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'happy',
        ]),
        'main_answer': 'happy',
        'prompt': 'laeta',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'comparative vocative singular feminine',
          'comparative vocative singular feminine',
          'comparative vocative singular feminine',
          'comparative vocative singular feminine',
        ]),
        'dictionary_entry': 'good: bonus, bona, bonum, (2-1-2)',
        'main_answer': 'comparative vocative singular feminine',
        'prompt': 'melior',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'into',
        'choices': list([
          'farmer',
          'into',
          'keen',
        ]),
        'prompt': 'in',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'bonus',
        'choices': list([
          'audio',
          'nomen',
          'bonus',
        ]),
        'prompt': 'good',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'ingens',
          'ingentis',
        ]),
        'prompt': 'ingens',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'keen',
        ]),
        'main_answer': 'keen',
        'prompt': 'acria',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'nominative plural masculine',
          'nominative plural masculine',
          'nominative plural masculine',
          'nominative plural masculine',
        ]),
        'dictionary_entry': 'that: ille, illa, illud',
        'main_answer': 'nominative plural masculine',
        'prompt': 'illi',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'inquit',
        ]),
        'main_answer': 'inquit',
        'prompt': 'it said',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'this',
        'choices': list([
          'happy',
          'name',
          'this',
        ]),
        'prompt': 'hic',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'say',
        'choices': list([
          'good',
          'boy',
          'say',
        ]),
        'prompt': 'inquam',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'into',
        'choices': list([
          'into',
          'happy',
          'keen',
        ]),
        'prompt': 'in',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'nomini',
        ]),
        'main_answer': 'nomini',
        'prompt': 'for the name',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'this',
        'choices': list([
          'into',
          'this',
          'I',
        ]),
        'prompt': 'hic',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'boy',
        ]),
        'main_answer': 'boy',
        'prompt': 'puerum',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'acriores',
        ]),
        'components': 'comparative vocative plural feminine',
        'main_answer': 'acriores',
        'prompt': 'keen: acer, acris, acre, (3-3)',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'nomen',
        'choices': list([
          'acer',
          'nomen',
          'capio',
        ]),
        'prompt': 'name',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'inquii',
        ]),
        'components': 'perfect active indicative singular 1st person',
        'main_answer': 'inquii',
        'prompt': 'say: inquam',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'bonus',
          'bona',
          'bonum',
        ]),
        'prompt': 'bonus',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'vocative plural',
          'vocative plural',
          'vocative plural',
        ]),
        'dictionary_entry': 'boy: puer, pueri, (m)',
        'main_answer': 'vocative plural',
        'prompt': 'pueri',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'nomina',
        ]),
        'main_answer': 'nomina',
        'prompt': 'names',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'dative plural feminine',
          'dative plural feminine',
          'dative plural feminine',
          'dative plural feminine',
          'dative plural feminine',
          'dative plural feminine',
        ]),
        'dictionary_entry': 'this: hic, haec, hoc',
        'main_answer': 'dative plural feminine',
        'prompt': 'his',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'say',
        'choices': list([
          'happy',
          'from',
          'say',
        ]),
        'prompt': 'inquam',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'ille',
          'illa',
          'illud',
        ]),
        'prompt': 'ille',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'acer',
          'acris',
          'acre',
        ]),
        'prompt': 'acer',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'superlative accusative plural neuter',
          'superlative accusative plural neuter',
          'superlative accusative plural neuter',
          'superlative accusative plural neuter',
          'superlative accusative plural neuter',
          'superlative accusative plural neuter',
        ]),
        'dictionary_entry': 'good: bonus, bona, bonum, (2-1-2)',
        'main_answer': 'superlative accusative plural neuter',
        'prompt': 'optima',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'nominative plural masculine',
          'nominative plural masculine',
          'nominative plural masculine',
          'nominative plural masculine',
        ]),
        'dictionary_entry': 'that: ille, illa, illud',
        'main_answer': 'nominative plural masculine',
        'prompt': 'illi',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'I am taking',
          'I take',
        ]),
        'main_answer': 'I take',
        'prompt': 'capio',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'ille',
        'choices': list([
          'capio',
          'acer',
          'ille',
        ]),
        'prompt': 'that',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'puella',
          'puellae',
        ]),
        'prompt': 'puella',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'into',
        ]),
        'main_answer': 'into',
        'prompt': 'in',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'into',
        ]),
        'main_answer': 'into',
        'prompt': 'in',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'leve',
          'levem',
          'leves',
          'levi',
          'levia',
          'levibus',
          'levis',
          'levium',
        ]),
        'main_answer': 'levis',
        'prompt': 'light',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'ParseWordCompToLatQuestion': dict({
        'answers': list([
          'laetissimis',
        ]),
        'components': 'superlative ablative plural masculine',
        'main_answer': 'laetissimis',
        'prompt': 'happy: laetus, laeta, laetum, (2-1-2)',
      }),
      'question_type': 'ParseWordCompToLatQuestion',
    }),
    dict({
      'PrincipalPartsQuestion': dict({
        'principal_parts': list([
          'hic',
          'haec',
          'hoc',
        ]),
        'prompt': 'hic',
      }),
      'question_type': 'PrincipalPartsQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'agricolae',
        ]),
        'main_answer': 'agricolae',
        'prompt': 'of a farmer',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'cepi',
        ]),
        'main_answer': 'cepi',
        'prompt': 'I took',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'e',
        'choices': list([
          'ingens',
          'e',
          'puella',
        ]),
        'prompt': 'from',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceEngToLatQuestion': dict({
        'answer': 'ingens',
        'choices': list([
          'puella',
          'ingens',
          'capio',
        ]),
        'prompt': 'large',
      }),
      'question_type': 'MultipleChoiceEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'from',
        'choices': list([
          'dog',
          'from',
          'good',
        ]),
        'prompt': 'e',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'genitive singular',
          'genitive singular',
          'genitive singular',
        ]),
        'dictionary_entry': 'dog: canis, canis, (m)',
        'main_answer': 'genitive singular',
        'prompt': 'canis',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'superlative dative plural neuter',
          'superlative dative plural neuter',
          'superlative dative plural neuter',
          'superlative dative plural neuter',
          'superlative dative plural neuter',
          'superlative dative plural neuter',
        ]),
        'dictionary_entry': 'large: ingens, ingentis, (3-1)',
        'main_answer': 'superlative dative plural neuter',
        'prompt': 'ingentissimis',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInEngToLatQuestion': dict({
        'answers': list([
          'huic',
        ]),
        'main_answer': 'huic',
        'prompt': 'to this',
      }),
      'question_type': 'TypeInEngToLatQuestion',
    }),
    dict({
      'MultipleChoiceLatToEngQuestion': dict({
        'answer': 'that',
        'choices': list([
          'keen',
          'that',
          'girl',
        ]),
        'prompt': 'ille',
      }),
      'question_type': 'MultipleChoiceLatToEngQuestion',
    }),
    dict({
      'ParseWordLatToCompQuestion': dict({
        'answers': list([
          'genitive plural',
        ]),
        'dictionary_entry': 'dog: canis, canis, (m)',
        'main_answer': 'genitive plural',
        'prompt': 'canum',
      }),
      'question_type': 'ParseWordLatToCompQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'best',
          'extremely good',
          'most good',
          'quite good',
          'rather good',
          'too good',
          'very good',
        ]),
        'main_answer': 'best',
        'prompt': 'optima',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
    dict({
      'TypeInLatToEngQuestion': dict({
        'answers': list([
          'he was saying',
          'it was saying',
          'she was saying',
        ]),
        'main_answer': 'he was saying',
        'prompt': 'inquiebat',
      }),
      'question_type': 'TypeInLatToEngQuestion',
    }),
  ])
# ---
# name: test_cli_normal.2
  '''
  INFO     root:__main__.py:104 Using random seed '10'.
  INFO     waitress:wasyncore.py:449 Serving on http://127.0.0.1:5500
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5500
  INFO     src.server.app:app.py:63 Reading vocab list.
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Verb'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'hear: audio, audire, audivi, auditus'
  DEBUG    src.core.accido._class_verb:_class_verb.py:109 RegularWord(audio, audire, audivi, auditus, meaning=hear)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'take: capio, capere, cepi'
  DEBUG    src.core.accido._class_verb:_class_verb.py:109 RegularWord(capio, capere, cepi, None, meaning=take)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'say: inquam'
  DEBUG    src.core.accido._class_verb:_class_verb.py:109 RegularWord(inquam, None, None, None, meaning=say)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Noun'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'girl: puella, puellae, (f)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(puella, puellae, gender=feminine, meaning=girl)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'farmer: agricola, agricolae, (m)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(agricola, agricolae, gender=masculine, meaning=farmer)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'boy: puer, pueri, (m)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(puer, pueri, gender=masculine, meaning=boy)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'dog: canis, canis, (m)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(canis, canis, gender=masculine, meaning=dog)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'name: nomen, nominis, (n)'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(nomen, nominis, gender=neuter, meaning=name)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'I: ego'
  DEBUG    src.core.accido._class_noun:_class_noun.py:106 Noun(ego, None, gender=None, meaning=I)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Adjective'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'large: ingens, ingentis, (3-1)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(ingens, ingentis, termination=1, declension=3, meaning=large)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'light: levis, leve, (3-2)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(levis, leve, termination=2, declension=3, meaning=light)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'keen: acer, acris, acre, (3-3)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(acer, acris, acre, termination=3, declension=3, meaning=keen)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'good: bonus, bona, bonum, (212)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(bonus, bona, bonum, termination=None, declension=212, meaning=good)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'happy: laetus, laeta, laetum, (2-1-2)'
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:120 Adjective(laetus, laeta, laetum, termination=None, declension=212, meaning=happy)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Regular'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'into: in'
  DEBUG    src.core.accido._class_regularword:_class_regularword.py:46 RegularWord(in, meaning=into)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'from: e'
  DEBUG    src.core.accido._class_regularword:_class_regularword.py:46 RegularWord(e, meaning=from)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line '@ Pronoun'
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'this: hic, haec, hoc'
  DEBUG    src.core.accido._class_pronoun:_class_pronoun.py:60 Pronoun(hic, meaning=this)
  DEBUG    src.core.lego.reader:reader.py:237 Reading line 'that: ille'
  DEBUG    src.core.accido._class_pronoun:_class_pronoun.py:60 Pronoun(ille, meaning=that)
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5500 "POST /send-vocab HTTP/1.1" 200 20
  DEBUG    urllib3.connectionpool:connectionpool.py:241 Starting new HTTP connection (1): 127.0.0.1:5500
  INFO     src.server.app:app.py:111 Validating settings.
  INFO     src.server.app:app.py:126 Returning 50 questions.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'take: capio, capere, cepi'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'take: capio, capere, cepi' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'dog: canis, canis, (m)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'dog: canis, canis, (m)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceEngToLatQuestion with word 'boy: puer, pueri, (m)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceEngToLatQuestion with word 'boy: puer, pueri, (m)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInEngToLatQuestion with word 'name: nomen, nominis, (n)'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(name, ablative singular, main=False)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInEngToLatQuestion with word 'name: nomen, nominis, (n)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInLatToEngQuestion with word 'happy: laetus, laeta, laetum, (2-1-2)'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive nominative singular feminine, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive nominative singular feminine, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive vocative singular feminine, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive vocative singular feminine, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive ablative singular feminine, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive ablative singular feminine, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive nominative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive nominative plural neuter, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive vocative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive vocative plural neuter, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive accusative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(happy, positive accusative plural neuter, main=True)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInLatToEngQuestion with word 'happy: laetus, laeta, laetum, (2-1-2)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'good: bonus, bona, bonum, (2-1-2)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'good: bonus, bona, bonum, (2-1-2)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceLatToEngQuestion with word 'into: in'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceLatToEngQuestion with word 'into: in' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'into: in'.
  DEBUG    src.core.rogo.asker:asker.py:151 Creating question of type PrincipalPartsQuestion with word 'into: in' failed.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceEngToLatQuestion with word 'good: bonus, bona, bonum, (2-1-2)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceEngToLatQuestion with word 'good: bonus, bona, bonum, (2-1-2)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'large: ingens, ingentis, (3-1)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type PrincipalPartsQuestion with word 'large: ingens, ingentis, (3-1)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInLatToEngQuestion with word 'keen: acer, acris, acre, (3-3)'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(keen, positive nominative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(keen, positive nominative plural neuter, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(keen, positive vocative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(keen, positive vocative plural neuter, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(keen, positive accusative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(keen, positive accusative plural neuter, main=True)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInLatToEngQuestion with word 'keen: acer, acris, acre, (3-3)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'that: ille, illa, illud'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'that: ille, illa, illud' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInEngToLatQuestion with word 'say: inquam'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(say, perfect active indicative singular 3rd person, main=False)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInEngToLatQuestion with word 'say: inquam' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceLatToEngQuestion with word 'this: hic, haec, hoc'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceLatToEngQuestion with word 'this: hic, haec, hoc' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordCompToLatQuestion with word 'from: e'.
  DEBUG    src.core.rogo.asker:asker.py:151 Creating question of type ParseWordCompToLatQuestion with word 'from: e' failed.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'say: inquam'.
  DEBUG    src.core.rogo.asker:asker.py:151 Creating question of type PrincipalPartsQuestion with word 'say: inquam' failed.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceLatToEngQuestion with word 'say: inquam'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceLatToEngQuestion with word 'say: inquam' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceLatToEngQuestion with word 'into: in'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceLatToEngQuestion with word 'into: in' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInEngToLatQuestion with word 'name: nomen, nominis, (n)'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(name, dative singular, main=False)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInEngToLatQuestion with word 'name: nomen, nominis, (n)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceLatToEngQuestion with word 'this: hic, haec, hoc'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceLatToEngQuestion with word 'this: hic, haec, hoc' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInLatToEngQuestion with word 'boy: puer, pueri, (m)'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(boy, accusative singular, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(boy, accusative singular, main=True)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInLatToEngQuestion with word 'boy: puer, pueri, (m)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordCompToLatQuestion with word 'keen: acer, acris, acre, (3-3)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordCompToLatQuestion with word 'keen: acer, acris, acre, (3-3)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceEngToLatQuestion with word 'name: nomen, nominis, (n)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceEngToLatQuestion with word 'name: nomen, nominis, (n)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordCompToLatQuestion with word 'say: inquam'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordCompToLatQuestion with word 'say: inquam' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'good: bonus, bona, bonum, (2-1-2)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type PrincipalPartsQuestion with word 'good: bonus, bona, bonum, (2-1-2)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'boy: puer, pueri, (m)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'boy: puer, pueri, (m)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInEngToLatQuestion with word 'name: nomen, nominis, (n)'.
  DEBUG    src.core.accido._class_noun:_class_noun.py:335 nomen.get(nominative, plural)
  DEBUG    src.core.accido._class_noun:_class_noun.py:335 nomen.get(accusative, plural)
  DEBUG    src.core.accido._class_noun:_class_noun.py:335 nomen.get(vocative, plural)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(name, accusative plural, main=False)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInEngToLatQuestion with word 'name: nomen, nominis, (n)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'this: hic, haec, hoc'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'this: hic, haec, hoc' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceLatToEngQuestion with word 'say: inquam'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceLatToEngQuestion with word 'say: inquam' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'that: ille, illa, illud'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type PrincipalPartsQuestion with word 'that: ille, illa, illud' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'keen: acer, acris, acre, (3-3)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type PrincipalPartsQuestion with word 'keen: acer, acris, acre, (3-3)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'good: bonus, bona, bonum, (2-1-2)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'good: bonus, bona, bonum, (2-1-2)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'that: ille, illa, illud'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'that: ille, illa, illud' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInLatToEngQuestion with word 'take: capio, capere, cepi'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(take, present active indicative singular 1st person, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(take, present active indicative singular 1st person, main=True)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInLatToEngQuestion with word 'take: capio, capere, cepi' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceEngToLatQuestion with word 'that: ille, illa, illud'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceEngToLatQuestion with word 'that: ille, illa, illud' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'girl: puella, puellae, (f)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type PrincipalPartsQuestion with word 'girl: puella, puellae, (f)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInLatToEngQuestion with word 'into: in'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(into, , main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(into, , main=True)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInLatToEngQuestion with word 'into: in' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInLatToEngQuestion with word 'into: in'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(into, , main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(into, , main=True)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInLatToEngQuestion with word 'into: in' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInEngToLatQuestion with word 'light: levis, leve, (3-2)'.
  DEBUG    src.core.accido._class_adjective:_class_adjective.py:859 levis.get(positive, masculine, nominative, singular, adverb=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(light, positive genitive plural neuter, main=False)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInEngToLatQuestion with word 'light: levis, leve, (3-2)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordCompToLatQuestion with word 'happy: laetus, laeta, laetum, (2-1-2)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordCompToLatQuestion with word 'happy: laetus, laeta, laetum, (2-1-2)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'this: hic, haec, hoc'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type PrincipalPartsQuestion with word 'this: hic, haec, hoc' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInEngToLatQuestion with word 'farmer: agricola, agricolae, (m)'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(farmer, genitive singular, main=False)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInEngToLatQuestion with word 'farmer: agricola, agricolae, (m)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInEngToLatQuestion with word 'take: capio, capere, cepi'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(take, perfect active indicative singular 1st person, main=False)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInEngToLatQuestion with word 'take: capio, capere, cepi' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceEngToLatQuestion with word 'from: e'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceEngToLatQuestion with word 'from: e' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceEngToLatQuestion with word 'large: ingens, ingentis, (3-1)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceEngToLatQuestion with word 'large: ingens, ingentis, (3-1)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceLatToEngQuestion with word 'from: e'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceLatToEngQuestion with word 'from: e' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type PrincipalPartsQuestion with word 'say: inquam'.
  DEBUG    src.core.rogo.asker:asker.py:151 Creating question of type PrincipalPartsQuestion with word 'say: inquam' failed.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'dog: canis, canis, (m)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'dog: canis, canis, (m)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'large: ingens, ingentis, (3-1)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'large: ingens, ingentis, (3-1)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInEngToLatQuestion with word 'this: hic, haec, hoc'.
  DEBUG    src.core.accido._class_pronoun:_class_pronoun.py:117 hic.get(masculine, dative, singular)
  DEBUG    src.core.accido._class_pronoun:_class_pronoun.py:117 hic.get(feminine, dative, singular)
  DEBUG    src.core.accido._class_pronoun:_class_pronoun.py:117 hic.get(neuter, dative, singular)
  DEBUG    src.core.accido._class_pronoun:_class_pronoun.py:117 hic.get(masculine, dative, singular)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(this, dative singular feminine, main=False)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInEngToLatQuestion with word 'this: hic, haec, hoc' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type MultipleChoiceLatToEngQuestion with word 'that: ille, illa, illud'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type MultipleChoiceLatToEngQuestion with word 'that: ille, illa, illud' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type ParseWordLatToCompQuestion with word 'dog: canis, canis, (m)'.
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type ParseWordLatToCompQuestion with word 'dog: canis, canis, (m)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInLatToEngQuestion with word 'good: bonus, bona, bonum, (2-1-2)'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative nominative singular feminine, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative nominative singular feminine, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative vocative singular feminine, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative vocative singular feminine, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative ablative singular feminine, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative ablative singular feminine, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative nominative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative nominative plural neuter, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative vocative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative vocative plural neuter, main=True)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative accusative plural neuter, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(good, superlative accusative plural neuter, main=True)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInLatToEngQuestion with word 'good: bonus, bona, bonum, (2-1-2)' succeeded.
  DEBUG    src.core.rogo.asker:asker.py:99 Creating new question of type TypeInLatToEngQuestion with word 'say: inquam'.
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(say, imperfect active indicative singular 3rd person, main=False)
  DEBUG    src.core.transfero.words:words.py:59 find_inflection(say, imperfect active indicative singular 3rd person, main=True)
  INFO     src.core.rogo.asker:asker.py:141 Creating question of type TypeInLatToEngQuestion with word 'say: inquam' succeeded.
  DEBUG    urllib3.connectionpool:connectionpool.py:544 http://127.0.0.1:5500 "POST /session HTTP/1.1" 200 9800
  
  '''
# ---
